--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,24 @@
 body{
     font-family: 'Raleway', sans-serif;
 }
+
+input[type="radio"] + label span {
+    transition: background .2s,
+      transform .2s;
+}
+
+input[type="radio"] + label span:hover,
+input[type="radio"] + label:hover span{
+  transform: scale(1.2);
+} 
+
+input[type="radio"]:checked + label span {
+  @apply bg-primary ;
+  box-shadow: 0px 0px 0px 2px white inset;
+}
+
+input[type="radio"]:checked + label{
+    @apply text-primary ;
+
+}
+
